<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background" >
    
    <TextView
        android:id="@+id/reg_title_text"
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:layout_alignParentTop="true"
    	android:layout_marginTop="30dp"
    	android:text="@string/register"
    	android:textAppearance="@style/body_text_style"
    	android:gravity="center"
        ></TextView>
    
    <LinearLayout
        android:id="@+id/reg_nick_name_layout"
        android:layout_width="match_parent"
    	android:layout_height="40dp"
    	android:layout_below="@id/reg_title_text"
    	android:layout_marginTop="20dp"
        >
        <TextView
        android:id="@+id/reg_nick_name_text"
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:layout_weight="7"
    	android:gravity="center"
    	android:text="@string/nick_name"
    	android:textAppearance="@style/body_text_style"
    	
        ></TextView>
    	<EditText
        android:id="@+id/reg_nick_name_edit"
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:layout_weight="3"
    	android:hint="@string/name_hint"
        ></EditText>
        
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/reg_mailbox_layout"
        android:layout_width="match_parent"
    	android:layout_height="40dp"
    	android:layout_below="@id/reg_nick_name_layout"
    	android:layout_marginTop="20dp"
        >
        <TextView
        android:id="@+id/reg_mailbox_text"
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:layout_weight="7"
    	android:gravity="center"
    	android:text="@string/mailbox"
    	android:textAppearance="@style/body_text_style"
    	
        ></TextView>
    	<EditText
        android:id="@+id/reg_mailbox_edit"
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:layout_weight="3"
    	android:hint="@string/mailbox_hint"
        ></EditText>
        
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/reg_password_layout"
        android:layout_width="match_parent"
    	android:layout_height="40dp"
    	android:layout_below="@id/reg_mailbox_layout"
    	android:layout_marginTop="20dp"
        >
        <TextView
        android:id="@+id/reg_password_text"
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:layout_weight="7"
    	android:gravity="center"
    	android:text="@string/password"
    	android:textAppearance="@style/body_text_style"
        ></TextView>
    	<EditText
        android:id="@+id/reg_password_edit"
        android:inputType="textPassword"
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:layout_weight="3"
    	android:hint="@string/password_hint"
        ></EditText>
    </LinearLayout>
    
    <Button
        android:id="@+id/reg_btn"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/submit"
        android:layout_below="@id/reg_password_layout"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_centerHorizontal="true"
        ></Button>
    
    <ProgressBar
	    android:id="@+id/register_pro_bar"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true"
	    android:layout_centerHorizontal="true"
	     ></ProgressBar>

</RelativeLayout>